--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://127.0.0.1:4000/"     # the base hostname & protocol for your site
+url: "http://code.adriandiaz.ca/"     # the base hostname & protocol for your site
                                   # http://code.adriandiaz.ca/ when testing with GitHub 
                                   # http://127.0.0.1:4000/ when testing locally
 twitter_username: jekyllrb
