--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,17 @@
 title: Griffin Art Projects
 email: info@griffinartprojects.ca
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Griffin Art Projects is an art gallery space located in North Vancouver that showcases contemporary art exhibitions. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://code.adriandiaz.ca/"     # the base hostname & protocol for your site
-                                  # http://code.adriandiaz.ca/ when testing with GitHub 
+url: "http://griffinartprojects.ca"     # the base hostname & protocol for your site
+                                  # http://code.adriandiaz.ca/ when testing with GitHub
+                                  # http://griffinartprojects.ca 
                                   # http://127.0.0.1:4000/ when testing locally
 twitter_username: jekyllrb
 github_username:  adriandgr
 facebook_username: GriffinArtProjects
 instagram_username: griffinartprojects
+google_analytics: UA-76826733-1
 author: Griffin Art Projects
 
 # Build settings
